# poc-python-mongo

./: .pre-commit-config.yaml  pyproject.toml
src/: app.py
src/controller/: beneficiario_router.py  cotacao_router.py  proponente_router.py
src/domain/: enums.py
src/domain/models/: entity.py
src/domain/repository/: IRepository.py  repository_manager.py
src/infra/: settings.py
src/infra/repository/: RepositoryManager.py  repository_base.py
src/service/: beneficiario_service.py  cotacao_service.py  proponente_service.py
src/service/provider/: query_generator.py
