[tool.poetry]
name = "poc-python-mongo"
version = "0.1.0"
description = ""
authors = ["Christian Catrofe <christianlopes100@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pymongo = "^4.6.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pre-commit = "^3.6.0"
pytest-random-order = "^1.1.1"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
